--- a/Code/Gateway/Gateway.csproj
+++ b/Code/Gateway/Gateway.csproj
@@ -5,4 +5,8 @@
 	 <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Yarp.ReverseProxy" Version="2.0.1" />
+  </ItemGroup>
+
 </Project>
